@@ -2,6 +2,7 @@
                 CHANGES IN RMOA VERSION 1.1
 
     o    Added streaming recommendation engines
+    o    Fix issue if getvotesforinstance does not return expected length https://groups.google.com/forum/#!topic/moa-users/xkDG6p15FIM
 
                 CHANGES IN RMOA VERSION 1.0
 
